add favicon.ico and avatar.jpeg; add google analytics; add brief for each post;

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
-timezone:
+title: 只会搬砖的菜鸟
+subtitle: 好记忆不如烂笔头
+description: 他之轮为砖，砌墙
+author: 亓新建
+language: zh-Hans
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
